Fix icon spacing

--- a/chrome/toolbar/tabbar.css
+++ b/chrome/toolbar/tabbar.css
@@ -225,6 +225,9 @@
   .titlebar-min, .titlebar-max, .titlebar-restore{
     margin-right: 1px !important;
   }
+  .titlebar-button::before{
+    margin-top: 1px;
+  }
 }
 
 /* #endregion */
